Fixed some stylings, and edited some html Corrected a issue where the header was being overlapped by the pricing section Changed some stylings on the about, service and contact page to be more uniformed across the site

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     font-size: 18px;
     color: #e5e7eb;
     justify-content: space-around;
-    position:fixed;
+    position:sticky;
     background-color: #1f2937;
     width: 100%;
     
@@ -158,7 +158,7 @@ a {
 .bodyonetwo2 {
     display: flex;
     padding: 50px;
-    justify-content: center;
+    justify-content: space-around;
     background-color: #e5e7eb;
     gap: 150px;
 }
